Closed
Bug 1133243
Opened 10 years ago
Closed 10 years ago
nsTextRunTransformations.cpp:52:53: error: use of undeclared identifier 'Move'
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox38 | --- | fixed |
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.58 KB,
patch
|
heycam
:
review+
|
Details | Diff | Splinter Review |
In file included from layout/generic/Unified_cpp_layout_generic3.cpp:11:
layout/generic/nsTextRunTransformations.cpp:52:53: error: use of undeclared identifier 'Move'; did you mean 'mozilla::Move'?
aFlags, Move(aStyles),
^~~~
mozilla::Move
Assignee | ||
Updated•10 years ago
|
Blocks: 1067755
Keywords: regression
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8564586 -
Flags: review?(cam)
Comment 2•10 years ago
|
||
Comment on attachment 8564586 [details] [diff] [review]
fix
Thanks.
Attachment #8564586 -
Flags: review?(cam) → review+
Assignee | ||
Comment 3•10 years ago
|
||
Flags: in-testsuite-
Comment 4•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in
before you can comment on or make changes to this bug.
Description
•