Bug 1133243 - Fix compilation problem hidden by unified sources.  r=heycam